--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
+<div class="container mx-auto bg-gray-50">
+
+    <app-nav-header></app-nav-header>
+
+    <router-outlet></router-outlet>
+
+    <footer>
+
+    </footer>
+</div>
